Scrollbar fix

--- a/web/src/scss/_room.scss
+++ b/web/src/scss/_room.scss
@@ -85,9 +85,12 @@
 .up-room__video {
   //border: 1px solid purple;
   height: 100%;
-  margin-top: $padding-std;
   padding-right: $padding-std;
   padding-left: $padding-std;
+}
+
+.up-room__video-player {
+  margin-top: $padding-std;
 }
 
 .up-room__video-buttons {
